--- a/public/index.html
+++ b/public/index.html
@@ -5,17 +5,38 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="ABC News Technical Test"
-    />
+    <meta name="description" content="ABC News Technical Test" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    {{/*  <script async src="//www.instagram.com/embed.js"></script>  */}}
+    <script>
+      window.fbAsyncInit = function () {
+        FB.init({
+          appId: "698061617997892",
+          xfbml: true,
+          version: "v13.0",
+        })
+        FB.AppEvents.logPageView()
+      }
+
+      ;(function (d, s, id) {
+        var js,
+          fjs = d.getElementsByTagName(s)[0]
+        if (d.getElementById(id)) {
+          return
+        }
+        js = d.createElement(s)
+        js.id = id
+        js.src = "https://connect.facebook.net/en_US/sdk.js"
+        fjs.parentNode.insertBefore(js, fjs)
+      })(document, "script", "facebook-jssdk")
+    </script>
+    {{/*
+    <script async src="//www.instagram.com/embed.js"></script>
+    */}}
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
